--- a/circle.yml
+++ b/circle.yml
@@ -3,8 +3,8 @@ machine:
     version: 2.3.1
 deployment:
   production:
-    pre:
-      - pyenv global 2.7.12
+      pre:
+        - pyenv global 2.7.12
 dependencies:
   pre:
     - gem install bundler
@@ -12,3 +12,8 @@ checkout:
   post:
     - bundle install
     - bash automated_build.sh
+deployment:
+  prod:
+    branch: master
+    commands:
+      - make rsync
